test: add local tenant-safe test workflow and scripts

--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test:env": "ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/env-validation.test.ts",
+    "test:ssr": "ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/ssr-auth.test.ts",
+    "test:onboarding": "ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/onboarding-edge-case.test.ts",
+    "test:shift": "TENANT_A_EMAIL=$TENANT_A_EMAIL TENANT_A_PASSWORD=$TENANT_A_PASSWORD TENANT_B_EMAIL=$TENANT_B_EMAIL TENANT_B_PASSWORD=$TENANT_B_PASSWORD ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/shift-sanity.test.ts",
+    "test:all": "npm run test:env && npm run test:ssr && npm run test:onboarding && npm run test:shift",
+    "test:workflow": "npm run test:env && npm run test:all",
+    "test:ssr-auth": "npm run test:ssr"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
@@ -19,6 +26,7 @@
     "@types/node": "^22.17.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
 }
