--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "build": "next build",
     "start": "next start",
     "typecheck": "tsc --noEmit",
+    "db:push": "bash scripts/db-push.sh",
     "test:env": "ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/env-validation.test.ts",
     "test:ssr": "ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/ssr-auth.test.ts",
     "test:me": "ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/me-sanity.test.ts",
     "test:dashboard": "ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/dashboard-sanity.test.ts",
     "test:onboarding": "ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/onboarding-edge-case.test.ts",
-    "test:employees": "ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/employees-sanity.test.ts",
+    "test:employees": "npm run db:push && ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/employees-sanity.test.ts",
     "test:shift": "TENANT_A_EMAIL=$TENANT_A_EMAIL TENANT_A_PASSWORD=$TENANT_A_PASSWORD TENANT_B_EMAIL=$TENANT_B_EMAIL TENANT_B_PASSWORD=$TENANT_B_PASSWORD ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/shift-sanity.test.ts",
-    "test:all": "npm run test:env && npm run test:ssr && npm run test:me && npm run test:dashboard && npm run test:onboarding && npm run test:employees && npm run test:shift",
+    "test:all": "npm run db:push && npm run test:env && npm run test:ssr && npm run test:me && npm run test:dashboard && npm run test:onboarding && npm run test:employees && npm run test:shift",
     "test:workflow": "npm run test:env && npm run test:all",
     "test:ssr-auth": "npm run test:ssr"
   },
