Feature/qsft 9 user info (#33)
* feat(auth): QSFT-9 add /api/me current user info

* feat(auth): QSFT-9 add current user info endpoint + wire UI + robust tests

* chore(test): make db push + migration checks CI-safe (QSFT-9)

* fix(qsft-9): align tenant context with RLS + make tests pass after migrations

* chore(qsft-9): make test:ssr self-starting + add verify script

* feat(ui): hide unauthorized actions using /api/me permissions (QSFT-9)

* feat(onboarding): add waiting room + employee dashboard routing

--- a/package.json
+++ b/package.json
@@ -8,16 +8,24 @@
     "start": "next start",
     "typecheck": "tsc --noEmit",
     "db:push": "bash scripts/db-push.sh",
-    "test:env": "ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/env-validation.test.ts",
-    "test:ssr": "ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/ssr-auth.test.ts",
-    "test:me": "ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/me-sanity.test.ts",
-    "test:dashboard": "ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/dashboard-sanity.test.ts",
-    "test:onboarding": "ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/onboarding-edge-case.test.ts",
-    "test:employees": "npm run db:push && ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/employees-sanity.test.ts",
-    "test:shift": "TENANT_A_EMAIL=$TENANT_A_EMAIL TENANT_A_PASSWORD=$TENANT_A_PASSWORD TENANT_B_EMAIL=$TENANT_B_EMAIL TENANT_B_PASSWORD=$TENANT_B_PASSWORD ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/shift-sanity.test.ts",
-    "test:all": "npm run db:push && npm run test:env && npm run test:ssr && npm run test:me && npm run test:dashboard && npm run test:onboarding && npm run test:employees && npm run test:shift",
+    "test:env": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/env-validation.test.ts",
+    "test:ui-permissions": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/ui-permissions.test.ts",
+    "test:routing": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/post-login-routing.test.ts",
+    "test:ssr:raw": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/ssr-auth.test.ts",
+    "test:ssr": "node scripts/run-ssr-tests.mjs",
+    "test:me:raw": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/me-sanity.test.ts",
+    "test:me": "node scripts/run-ssr-tests.mjs test:me:raw",
+    "test:dashboard:raw": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/dashboard-sanity.test.ts",
+    "test:dashboard": "node scripts/run-ssr-tests.mjs test:dashboard:raw",
+    "test:http": "node scripts/run-ssr-tests.mjs test:ssr:raw test:me:raw test:dashboard:raw",
+    "test:onboarding": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/onboarding-edge-case.test.ts",
+    "test:employees": "npm run db:push && bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/employees-sanity.test.ts",
+    "test:shift": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/shift-sanity.test.ts",
+    "test:all": "npm run db:push && npm run test:env && npm run test:ui-permissions && npm run test:routing && npm run test:http && npm run test:onboarding && npm run test:employees && npm run test:shift",
     "test:workflow": "npm run test:env && npm run test:all",
-    "test:ssr-auth": "npm run test:ssr"
+    "test:ssr-auth": "npm run test:ssr",
+    "verify:qsft9": "bash scripts/verify-qsft9.sh",
+    "verify": "npm run verify:qsft9"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
