--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "test:me": "node scripts/run-ssr-tests.mjs test:me:raw",
     "test:dashboard:raw": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/dashboard-sanity.test.ts",
     "test:dashboard": "node scripts/run-ssr-tests.mjs test:dashboard:raw",
+    "test:my-shifts:service": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/my-shifts.test.ts",
+    "test:api-my-shifts:raw": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/api-my-shifts.test.ts",
+    "test:api-my-shifts": "node scripts/run-ssr-tests.mjs test:api-my-shifts:raw",
+    "test:my-shifts": "npm run test:my-shifts:service && npm run test:api-my-shifts",
     "test:http": "node scripts/run-ssr-tests.mjs test:ssr:raw test:me:raw test:dashboard:raw",
     "test:onboarding": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/onboarding-edge-case.test.ts",
     "test:employees": "npm run db:push && bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/employees-sanity.test.ts",
     "test:shift": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/shift-sanity.test.ts",
-    "test:all": "npm run db:push && npm run test:env && npm run test:ui-permissions && npm run test:routing && npm run test:http && npm run test:onboarding && npm run test:employees && npm run test:shift",
+    "test:all": "npm run db:push && npm run test:env && npm run test:ui-permissions && npm run test:routing && npm run test:http && npm run test:onboarding && npm run test:employees && npm run test:my-shifts && npm run test:shift",
     "test:workflow": "npm run test:env && npm run test:all",
     "test:ssr-auth": "npm run test:ssr",
     "verify:qsft9": "bash scripts/verify-qsft9.sh",
