chore(env): validate SUPABASE_URL and prevent placeholder usage

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,4 @@
-NEXT_PUBLIC_SUPABASE_URL=
+# Do NOT commit real keys. Replace with your project URL.
+SUPABASE_URL=https://your-project-id.supabase.co
+NEXT_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
