--- a/.env.test.local.example
+++ b/.env.test.local.example
@@ -1,4 +1,6 @@
-NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+# Do NOT commit real keys. Replace with your project URL.
+SUPABASE_URL=https://your-project-id.supabase.co
+NEXT_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 TENANT_A_EMAIL=alice@tenantA.com
 TENANT_A_PASSWORD=secretA
