chore(dev): add local Supabase (Docker) workflow + deterministic local verify

--- a/.env.test.local.example
+++ b/.env.test.local.example
@@ -1,7 +1,9 @@
-# Do NOT commit real keys. Replace with your project URL.
-SUPABASE_URL=https://your-project-id.supabase.co
-NEXT_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+# LOCAL-FIRST defaults (Supabase local stack).
+# Do NOT commit real keys. Replace with your machine values from `npm run env:local`.
+SUPABASE_URL=http://localhost:54321
+NEXT_PUBLIC_SUPABASE_URL=http://localhost:54321
+SUPABASE_ANON_KEY=local-anon-key-from-supabase-status
+NEXT_PUBLIC_SUPABASE_ANON_KEY=local-anon-key-from-supabase-status
 TENANT_A_EMAIL=alice@tenantA.com
 TENANT_A_PASSWORD=secretA
 TENANT_B_EMAIL=bob@tenantB.com
