--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,6 @@
-# Do NOT commit real keys. Replace with your project URL.
-SUPABASE_URL=https://your-project-id.supabase.co
-NEXT_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
+# LOCAL-FIRST defaults (Supabase local stack).
+# Do NOT commit real keys. Replace with your machine values from `npm run env:local`.
+SUPABASE_URL=http://localhost:54321
+NEXT_PUBLIC_SUPABASE_URL=http://localhost:54321
+SUPABASE_ANON_KEY=local-anon-key-from-supabase-status
+NEXT_PUBLIC_SUPABASE_ANON_KEY=local-anon-key-from-supabase-status
