--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,6 @@
-# LOCAL-FIRST defaults (Supabase local stack).
-# Do NOT commit real keys. Replace with your machine values from `npm run env:local`.
-SUPABASE_URL=http://localhost:54321
-NEXT_PUBLIC_SUPABASE_URL=http://localhost:54321
-SUPABASE_ANON_KEY=local-anon-key-from-supabase-status
-NEXT_PUBLIC_SUPABASE_ANON_KEY=local-anon-key-from-supabase-status
+# Live Supabase (web project).
+# Do NOT commit real keys. Replace with your project URL and anon key.
+SUPABASE_URL=https://your-project-id.supabase.co
+NEXT_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_ANON_KEY=your-anon-key
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
