chore(dev): cloud-only Supabase onboarding via /signup

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,6 @@
 # Live Supabase (web project).
-# Do NOT commit real keys. Replace with your project URL and anon key.
-SUPABASE_URL=https://your-project-id.supabase.co
-NEXT_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
-SUPABASE_ANON_KEY=your-anon-key
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+# Do NOT commit real keys. Replace with your project URL and publishable key.
+SUPABASE_URL=https://ocdaibqbmvppzrdeneqh.supabase.co
+NEXT_PUBLIC_SUPABASE_URL=https://ocdaibqbmvppzrdeneqh.supabase.co
+SUPABASE_ANON_KEY=sb_publishable_3wxEZlDjB0a_Z0bOuz_43A_UXo4C1_m
+NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_3wxEZlDjB0a_Z0bOuz_43A_UXo4C1_m
