feat(my): add shift accept/decline flow (db+api+ui+tests)

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test:my-shifts:service": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/my-shifts.test.ts",
     "test:api-my-shifts:raw": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/api-my-shifts.test.ts",
     "test:api-my-shifts": "node scripts/run-ssr-tests.mjs test:api-my-shifts:raw",
-    "test:my-shifts": "npm run test:my-shifts:service && npm run test:api-my-shifts",
+    "test:api-my-shift-respond:raw": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/api-my-shift-respond.test.ts",
+    "test:api-my-shift-respond": "node scripts/run-ssr-tests.mjs test:api-my-shift-respond:raw",
+    "test:my-shifts": "npm run test:my-shifts:service && npm run test:api-my-shifts && npm run test:api-my-shift-respond",
     "test:http": "node scripts/run-ssr-tests.mjs test:ssr:raw test:me:raw test:dashboard:raw",
     "test:onboarding": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/onboarding-edge-case.test.ts",
     "test:env-dependent": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/env-dependent/onboarding-multi-company.test.ts",
