--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test:env": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/env-validation.test.ts",
     "test:ui-permissions": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/ui-permissions.test.ts",
     "test:routing": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/post-login-routing.test.ts",
+    "test:api-auth-cookie": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/api-auth-cookie.test.ts",
+    "test:manage-guard": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/manage-permissions-guard.test.ts",
     "test:ssr:raw": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/ssr-auth.test.ts",
     "test:ssr": "node scripts/run-ssr-tests.mjs",
     "test:me:raw": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/me-sanity.test.ts",
@@ -18,11 +20,16 @@
     "test:dashboard:raw": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/dashboard-sanity.test.ts",
     "test:dashboard": "node scripts/run-ssr-tests.mjs test:dashboard:raw",
     "test:my-shifts:service": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/my-shifts.test.ts",
+    "test:api-auth-context:raw": "ENABLE_TEST_AUTH_ROUTES=1 ENABLE_DEBUG_AUTH=1 bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/api-auth-context.test.ts",
+    "test:api-auth-context": "npm run test:api-auth-context:raw",
     "test:api-my-shifts:raw": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/api-my-shifts.test.ts",
     "test:api-my-shifts": "node scripts/run-ssr-tests.mjs test:api-my-shifts:raw",
     "test:api-my-shift-respond:raw": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/api-my-shift-respond.test.ts",
     "test:api-my-shift-respond": "node scripts/run-ssr-tests.mjs test:api-my-shift-respond:raw",
     "test:my-shifts": "npm run test:my-shifts:service && npm run test:api-my-shifts && npm run test:api-my-shift-respond",
+    "test:invite-accept": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/invite-accept-single-tenant.test.ts",
+    "test:marketplace-mvp": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/marketplace-mvp.test.ts",
+    "smoke:marketplace": "ENABLE_MARKETPLACE=1 bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/marketplace-smoke.test.ts",
     "test:http": "node scripts/run-ssr-tests.mjs test:ssr:raw test:me:raw test:dashboard:raw",
     "test:onboarding": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/onboarding-edge-case.test.ts",
     "test:env-dependent": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/env-dependent/onboarding-multi-company.test.ts",
@@ -36,6 +43,7 @@
     "verify": "npm run verify:cloud"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.57.4",
     "next": "^15.5.3",
     "react": "^19.1.1",
