Feature/qsft 9 user info (#35)
* feat(auth): QSFT-9 add /api/me current user info

* feat(auth): QSFT-9 add current user info endpoint + wire UI + robust tests

* chore(test): make db push + migration checks CI-safe (QSFT-9)

* fix(qsft-9): align tenant context with RLS + make tests pass after migrations

* chore(qsft-9): make test:ssr self-starting + add verify script

* feat(ui): hide unauthorized actions using /api/me permissions (QSFT-9)

* feat(onboarding): add waiting room + employee dashboard routing

* test(my): add coverage for My Shifts next-7-days + tenant isolation

* test(my): make core my-shifts tests deterministic (no env SKIP)

* chore(env): validate SUPABASE_URL and prevent placeholder usage

* chore(dev): add local Supabase (Docker) workflow + deterministic local verify

* fix(db): replace expression UNIQUE constraints with unique indexes

* chore(dev): ignore supabase temp artifacts and commit local ensure script

* chore(dev): ignore Supabase local branch artifacts

* chore(dev): revert local Supabase workflow and use live Supabase only

* chore(dev): cloud-only Supabase onboarding via /signup

* docs: update QSFT-9 verification notes

* feat(my): add shift accept/decline flow (db+api+ui+tests)

* feat(ui): add navigation links + improve onboarding message for unlinked employee

* fix(auth): make /api/me work with SSR cookie sessions + bearer fallback

* fix(auth): make /api/me cookie auth use SSR client (no cookie name assumptions)

* fix(ui): normalize permissions and fix canManage gating

* fix(ui): finalize permissions loading/null compatibility

* feat: finalize invite, workspaces, and marketplace mvp hardening

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test:env": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/env-validation.test.ts",
     "test:ui-permissions": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/ui-permissions.test.ts",
     "test:routing": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/post-login-routing.test.ts",
+    "test:api-auth-cookie": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/api-auth-cookie.test.ts",
+    "test:manage-guard": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/manage-permissions-guard.test.ts",
     "test:ssr:raw": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/ssr-auth.test.ts",
     "test:ssr": "node scripts/run-ssr-tests.mjs",
     "test:me:raw": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/me-sanity.test.ts",
@@ -18,20 +20,30 @@
     "test:dashboard:raw": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/dashboard-sanity.test.ts",
     "test:dashboard": "node scripts/run-ssr-tests.mjs test:dashboard:raw",
     "test:my-shifts:service": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/my-shifts.test.ts",
+    "test:api-auth-context:raw": "ENABLE_TEST_AUTH_ROUTES=1 ENABLE_DEBUG_AUTH=1 bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/api-auth-context.test.ts",
+    "test:api-auth-context": "npm run test:api-auth-context:raw",
     "test:api-my-shifts:raw": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/api-my-shifts.test.ts",
     "test:api-my-shifts": "node scripts/run-ssr-tests.mjs test:api-my-shifts:raw",
-    "test:my-shifts": "npm run test:my-shifts:service && npm run test:api-my-shifts",
+    "test:api-my-shift-respond:raw": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/api-my-shift-respond.test.ts",
+    "test:api-my-shift-respond": "node scripts/run-ssr-tests.mjs test:api-my-shift-respond:raw",
+    "test:my-shifts": "npm run test:my-shifts:service && npm run test:api-my-shifts && npm run test:api-my-shift-respond",
+    "test:invite-accept": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/invite-accept-single-tenant.test.ts",
+    "test:marketplace-mvp": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/marketplace-mvp.test.ts",
+    "smoke:marketplace": "ENABLE_MARKETPLACE=1 bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/marketplace-smoke.test.ts",
     "test:http": "node scripts/run-ssr-tests.mjs test:ssr:raw test:me:raw test:dashboard:raw",
     "test:onboarding": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/onboarding-edge-case.test.ts",
+    "test:env-dependent": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/env-dependent/onboarding-multi-company.test.ts",
     "test:employees": "npm run db:push && bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/employees-sanity.test.ts",
     "test:shift": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/shift-sanity.test.ts",
     "test:all": "npm run db:push && npm run test:env && npm run test:ui-permissions && npm run test:routing && npm run test:http && npm run test:onboarding && npm run test:employees && npm run test:my-shifts && npm run test:shift",
     "test:workflow": "npm run test:env && npm run test:all",
     "test:ssr-auth": "npm run test:ssr",
     "verify:qsft9": "bash scripts/verify-qsft9.sh",
-    "verify": "npm run verify:qsft9"
+    "verify:cloud": "bash scripts/verify-cloud.sh",
+    "verify": "npm run verify:cloud"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.57.4",
     "next": "^15.5.3",
     "react": "^19.1.1",
