--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "gshift",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "npm@10",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsc --noEmit -p tsconfig.typecheck.json",
+    "lint": "eslint .",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "ci:check": "npm run typecheck && npm run lint && npm run build",
+    "test:smoke:e2e": "npm run build && playwright test -c playwright.config.ts",
     "db:push": "bash scripts/db-push.sh",
     "test:env": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/env-validation.test.ts",
     "test:ui-permissions": "bash scripts/run-with-test-env.sh ts-node --transpile-only --compiler-options '{\"module\":\"CommonJS\",\"moduleResolution\":\"Node\"}' src/core/utils/tests/ui-permissions.test.ts",
@@ -55,13 +61,19 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@playwright/test": "^1.58.2",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.1",
     "@types/node": "^22.17.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@vitest/ui": "^2.1.1",
+    "eslint": "^9.39.3",
+    "eslint-config-next": "^15.5.12",
     "jsdom": "^25.0.1",
+    "prettier": "^3.8.1",
+    "react-hook-form": "^7.71.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "vitest": "^2.1.1"
