--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,8 @@
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "tests/**/*",
+    "playwright.config.ts"
   ]
 }
